# grad-norm

./: .gitignore  baseline_llama3.sh  baseline_qwen3.sh  datasets.ipynb  eval.py  experiment.ipynb  main.py  pyproject.toml  run.sh  sweep.sh  sweep_eval.sh  sweep_gradnorm.sh  sweep_results.json  sweep_results.tsv  z_dev2.ipynb  z_dev3.ipynb  z_dev4.ipynb  z_dev5.ipynb  z_dev6.ipynb  z_dev7.ipynb  z_dev8.ipynb  z_tmp.tsv
ablation/: ablate.py  ablate2.py  ablate3.py  distance_dist.py  length_dist.py  plot.sh  score_dist.py
cli/: evaluate.py  evaluate_gradnorm.py  gradnorm.py  inference.py  predict.py  sal_score.py
configs/: gpt-oss-20b.yaml  guide.md  llama-3.1-8b.yaml  params_llama-3.1-8b.txt  params_qwen3-8b.txt  qwen3-8b.yaml  short_guide.md
core/: data.py  gradnorm.py
gradnorm/: ablate.py  core.py  data.py  entropy.py  entropy_ablate.py  eval.py  gradnorm.py  losses.py  metrics.py  run.py
grads/: aggregate.py  core.py  extract.py  score.py  scoring.py
misc/: sal_scoring.py
outputs/: Llama-3.1-8B-Instruct_algorithm-generated_final_layer.json  Llama-3.1-8B-Instruct_hand-crafted_final_layer.json  Qwen3-8B_algorithm-generated_lm_head.json  Qwen3-8B_hand-crafted_final_layer.json  Qwen3-8B_hand-crafted_out_proj.json  qwen_lmhead.json
results/: gradnorm_eval.tsv  gradnorm_llama.tsv  gradnorm_qwen.tsv
sal/: extract.py  gradient.py  score.py
scripts/: gitadd.sh  sweep_eval.sh  sweep_gradnorm.sh  sweep_sal.sh  sweep_sal_score.sh
tests/: standard-padded.json  standard-unpadded.json  test_gradnorm.py  test_grads.py  test_kl_loss.py  test_sal.py  (+1 more)
(+6351 files in other folders)
